@@ -1631,7 +1631,7 @@ static unsigned get_register_id( char **parg, int *size )
 	for( i = 0; i < DBGREGS.count; i++ )
 	{
 		l = strlen( DBGREGS.name[i] );
-		if( l > 0 && !stringcasecmp( *parg, DBGREGS.name[i], l ) )
+		if( l > 0 && !stringcasecmp( *parg, DBGREGS.name[i] ) )
 		{
 			if( !isalnum( (*parg)[l] ) )
 			{
